--- a/TwitterTest/Gemfile
+++ b/TwitterTest/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 
 # Bundle Twitter
 gem 'twitter', '~> 5.14.0'
+# Bundle OAuth
+gem 'omniauth-twitter', '~> 1.1.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.0'
 # Use sqlite3 as the database for Active Record
