--- a/ProjTracker/Gemfile
+++ b/ProjTracker/Gemfile
@@ -1,4 +1,7 @@
 source 'https://rubygems.org'
+
+# Bundle Faker for some test data
+gem 'faker', '~> 1.4.3'
 # adding starter_generators to play with CSS
 gem 'starter_generators'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
