--- a/RailsU/Gemfile
+++ b/RailsU/Gemfile
@@ -1,5 +1,9 @@
 source 'https://rubygems.org'
 
+# Bundle Faker
+gem 'faker', '~> 1.4.3'
+# Bundle pagination gem
+gem 'will_paginate', '~> 3.0.7'
 # Bundle bootstrap
 gem 'bootstrap-sass', '~> 3.2.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
