--- a/TwitterTest/.gitignore
+++ b/TwitterTest/.gitignore
@@ -14,3 +14,6 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Hide the Twitter token and secret
+/config/environments/development.rb
